cmake_minimum_required(VERSION 3.23)
project(stm32_openlib C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(CMSIS)
include_directories(CMSIS/Include)
include_directories(Device)
include_directories(Device/STM32F4xx)
include_directories(Device/STM32F4xx/Include)
include_directories(stm32_openlib)
include_directories(stm32_openlib/inc)
include_directories(stm32_openlib/src)
include_directories(STM32F4xx_StdPeriph_Driver)
include_directories(STM32F4xx_StdPeriph_Driver/inc)
include_directories(STM32F4xx_StdPeriph_Driver/src)

add_executable(stm32_openlib
        CMSIS/Include/arm_common_tables.h
        CMSIS/Include/arm_math.h
        CMSIS/Include/core_cm4.h
        CMSIS/Include/core_cm4_simd.h
        CMSIS/Include/core_cmFunc.h
        CMSIS/Include/core_cmInstr.h
        Device/STM32F4xx/Include/stm32f4xx.h
        Device/STM32F4xx/Include/system_stm32f4xx.h
        stm32_openlib/inc/led.h
        stm32_openlib/src/led.c
        STM32F4xx_StdPeriph_Driver/inc/misc.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_adc.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_can.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_crc.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_cryp.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dac.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dbgmcu.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dcmi.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dma.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_exti.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_flash.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_fsmc.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_gpio.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_hash.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_i2c.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_iwdg.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_pwr.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rcc.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rng.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rtc.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_sdio.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_spi.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_syscfg.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_tim.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_usart.h
        STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_wwdg.h
        STM32F4xx_StdPeriph_Driver/src/misc.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_adc.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_can.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_crc.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_aes.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_des.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_tdes.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dac.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dbgmcu.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dcmi.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dma.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_exti.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_flash.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_fsmc.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_gpio.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash_md5.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash_sha1.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_i2c.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_iwdg.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_pwr.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rcc.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rng.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rtc.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_sdio.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_spi.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_syscfg.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_tim.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_usart.c
        STM32F4xx_StdPeriph_Driver/src/stm32f4xx_wwdg.c
        main.c stm32_openlib/inc/button.h stm32_openlib/src/button.c example/button/main.c)
