cmake_minimum_required(VERSION 3.23)
project(stm32_openlib)

set(CMAKE_CXX_STANDARD 14)

include_directories(dependencies/cmsis)
include_directories(dependencies/cmsis/include)
include_directories(dependencies/device)
include_directories(dependencies/device/stm32f4xx)
include_directories(dependencies/device/stm32f4xx/include)
include_directories(dependencies/stm32f4xx_stdperiph_driver/include)
include_directories(source/include)

add_executable(stm32_openlib
        dependencies/cmsis/include/arm_common_tables.h
        dependencies/cmsis/include/arm_math.h
        dependencies/cmsis/include/core_cm4.h
        dependencies/cmsis/include/core_cm4_simd.h
        dependencies/cmsis/include/core_cmFunc.h
        dependencies/cmsis/include/core_cmInstr.h
        dependencies/device/stm32f4xx/include/stm32f4xx.h
        dependencies/device/stm32f4xx/include/system_stm32f4xx.h
        dependencies/stm32f4xx_stdperiph_driver/include/misc.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_adc.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_can.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_crc.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_cryp.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_dac.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_dbgmcu.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_dcmi.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_dma.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_exti.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_flash.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_fsmc.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_gpio.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_hash.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_i2c.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_iwdg.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_pwr.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_rcc.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_rng.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_rtc.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_sdio.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_spi.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_syscfg.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_tim.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_usart.h
        dependencies/stm32f4xx_stdperiph_driver/include/stm32f4xx_wwdg.h
        dependencies/stm32f4xx_stdperiph_driver/source/misc.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_adc.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_can.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_crc.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_cryp.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_cryp_aes.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_cryp_des.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_cryp_tdes.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_dac.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_dbgmcu.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_dcmi.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_dma.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_exti.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_flash.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_fsmc.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_gpio.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_hash.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_hash_md5.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_hash_sha1.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_i2c.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_iwdg.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_pwr.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_rcc.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_rng.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_rtc.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_sdio.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_spi.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_syscfg.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_tim.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_usart.c
        dependencies/stm32f4xx_stdperiph_driver/source/stm32f4xx_wwdg.c
        "documentation/cmsis/CMSIS END USER LICENCE AGREEMENT.pdf"
        documentation/device/Release_Notes.html
        documentation/stm32f4xx_stdperiph_driver/Release_Notes.html
        example/Lab1/main.c
        source/include/arraylist.h
        source/include/button.h
        source/include/handler.h
        source/include/led.h
        source/include/timer.h
        source/library/arraylist.c
        source/library/button.c
        source/library/handler.c
        source/library/led.c
        source/library/timer.c)
